engines/ep/tests/mock/mock_ep_bucket.cc
@@ -21,6 +21,16 @@
 #include "failover-table.h"
 #include "mock_checkpoint_manager.h"
 #include "mock_item_freq_decayer.h"
+#include "mock_replicationthrottle.h"
+
+MockEPBucket::MockEPBucket(EventuallyPersistentEngine& theEngine)
+    : EPBucket(theEngine) {
+    // Replace replicationThrottle with Mock to allow controlling when it
+    // pauses during tests.
+    replicationThrottle =
+            std::make_unique<::testing::NiceMock<MockReplicationThrottle>>(
+                    replicationThrottle.release());
+}
 
 void MockEPBucket::createItemFreqDecayerTask() {
     Configuration& config = engine.getConfiguration();
